@startuml
hide circle
hide empty members

Title <b>Server Classes</b>\n<size:12>Author: ferg2065\n<size:12>Reviewed by: slip5295</size>

class "Client" as sq 
class "Server" as sqs{
	-AccountManager
	-ProjectManager
	-SessionManager
	-ChatManager
	+AccountManagerMethods()
	+ProjectManagerMethods()
	+SessionManagerMethods()
	+ChatManagerMethods(GUIDs)
	}
	class "AccountManager" as sqs_ua_m{
		-AccountList
		+CreateAccount(Name, Email)
		+Login(LoginInfo)
		+Logout(UserID)
		+GetUserDetails(Name)
		+SetUserDetails(UserUpdateInfo)
		}
		class "UserAccount" as sqs_ua {
			+first_name
			+last_name
			+user_name
			-password
			+register()
			+login()
			+logout()
			}
	class "ProjectManager" as sqs_pr_m{
		-ProjectList
		+CreateProject(Name)
		+OpenProject(Name)
		+DeleteProject(Name)
		+GetProject(Name)
		+GetProject(ProjectID)
		+UpdateProject(ProjectUpdateInfo)
		}
		class "Project" as sqs_pr{
			-ProjectID
			-ProjectDescription
			-ProjectSettings
			-FileIDs
			-OwnerUserIDs
			+GetProjectID()
			+GetProjectDescription()
			+GetProjectSettings()
			+GetProjectFiles()
			+GetProjectOwners()
			+UpdateProject(Key,Value)
			+UpdateFile(FileUpdateInfo)
			}
			class "File" as sqs_fi{
				-FileID
				-FileName
				-FileDescription
				-FileContent
				+GetFileInfo()
				+UpdateFile(Key,Value)
				}
'	class "SessionManager" as sqs_se_m{
'		-SessionList
'		+CreateSession()
'		+CloseSession()
'		+GetSession(SessionID)
'		}
'		class "Session" as sqs_se{
'			+Socket
'			+SessionID
'			+UserID
'			+ProjectID
'			+ChatIDs
'			}
	class "ChatManager" as sqs_ch_m{
		+chatroomList
		+createRoom(name)
		}
		class "ChatRoom" as sqs_ch {
			+id
			+addMessage(msg)
			+getMessages()
			+sendMessagesToClients()
			}
			class "ChatMessage" as sqs_ch_mes{
				+fromID
				+text
				+timestamp
				}


sq -right- sqs : <<TCP>>

	sqs *-- sqs_pr_m 
		sqs_pr_m "1" -- "*" sqs_pr : Project List
			sqs_pr "1" -- "*" sqs_fi : File List
	sqs *-- sqs_ua_m 
		sqs_ua_m "1" -- "*" sqs_ua : User Account List
	sqs *-- sqs_ch_m 
		sqs_ch_m "1" -- "*" sqs_ch : Chat Room List 
			sqs_ch "1" -- "*" sqs_ch_mes : Message Log
'	sqs *-- "1" sqs_se_m 
'		sqs_se_m o-- "*" sqs_se



@enduml